force-app/main/default/objects/Asset/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(ISPICKVAL(Status,&quot;Sold&quot;) , Sold_Date__c-PurchaseDate, TODAY()- PurchaseDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days this unit has been in inventory.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>