force-app/main/default/objects/Asset/fields/Body_Style__c.field-meta.xml
<CustomField>
    <fullName>Body_Style__c</fullName>
    <label>Body Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Body_Style</valueSetName>
    </valueSet>
</CustomField>