force-app/main/default/objects/Asset/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Manufacture</label>
    <referenceTo>Manufacture__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>