force-app/main/default/objects/Asset/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Model</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Make does not match the Manufacture.</errorMessage>
        <filterItems>
            <field>Model__c.Manufacture__c</field>
            <operation>equals</operation>
            <valueField>$Source.Make__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Model__c</referenceTo>
    <relationshipLabel>Vehicles</relationshipLabel>
    <relationshipName>Vehicles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>