force-app/main/default/objects/Asset/fields/Trim__c.field-meta.xml
<CustomField>
    <fullName>Trim__c</fullName>
    <inlineHelpText>Utility: Work Vehicle
Standard: no upgrades.
Sport: upgraded engine performance and handling.
Luxury: upgraded interior and smoother suspension.</inlineHelpText>
    <label>Trim</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Sport</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>