force-app/main/default/objects/Asset/validationRules/Sold_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Sold_Date</fullName>
    <active>true</active>
    <description>Sold information has been filled in.</description>
    <errorConditionFormula>AND(
ISBLANK(Sold_Date__c),
 ISPICKVAL(Status,&apos;Sold&apos;))</errorConditionFormula>
    <errorDisplayField>Sold_Date__c</errorDisplayField>
    <errorMessage>Sold Date and Price must be filled in for sold vehicles.</errorMessage>
</ValidationRule>