force-app/main/default/objects/Asset/validationRules/Sold_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Sold_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Sold_Price__c),
 ISPICKVAL(Status,&apos;Sold&apos;))</errorConditionFormula>
    <errorDisplayField>Sold_Price__c</errorDisplayField>
    <errorMessage>Sale price must be filled in for sold vehicles.</errorMessage>
</ValidationRule>