force-app/main/default/objects/Asset/validationRules/Sold_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Sold_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
NOT(ISBLANK(Sold_Date__c)),
 NOT(ISBLANK(Sold_Price__c))),
 NOT(ISPICKVAL(Status,&apos;Sold&apos;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Location must be set to sold if Sold Date or Price is populated.</errorMessage>
</ValidationRule>